--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.0.1",
+    "@mui/joy": "^5.0.0-beta.17",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.14.20",
     "@reduxjs/toolkit": "^1.6.2",
